Multiple winners in a game are now possible